--- a/src/css/customizedpage.css
+++ b/src/css/customizedpage.css
@@ -21,6 +21,9 @@
     padding-top: 10rem;
     text-align: center;
 }
+.Customized {
+    background: #F5F1E0;
+}
 
 .customized-content {
     margin-left: 6rem;
