--- a/src/css/Getintouch.css
+++ b/src/css/Getintouch.css
@@ -72,7 +72,9 @@
 
 
 }
-
+.Getintouch a{
+    text-decoration: none !important;
+  }
 
 @media only screen and (max-width: 992px) {
     
@@ -83,13 +85,13 @@
     
     }
     .Getintouch h2 {
-        font-size: 1.6rem;
+        font-size: 2rem;
         text-align: center;
-        padding-top: 1rem;
+        padding-top: 0rem;
         padding-bottom: .5rem;
     }
     .Getintouch-left-content {
-        margin-top: 2em;
+        margin-top: 2rem;
     }
     .socialmedia-img {
         height: 4rem;
@@ -104,7 +106,7 @@
         padding: 1.5rem;
 
     }
-
+    
     .form-label {
         font-size: .9rem
     }
@@ -125,7 +127,7 @@
     }
 
     .faq-description {
-        font-size: .7rem;
+        font-size: .8rem;
     }
 
     .accordion-button {
