--- a/src/Components/landingpagepackage/basictopstyle.css
+++ b/src/Components/landingpagepackage/basictopstyle.css
@@ -104,8 +104,8 @@
     }
 
     .swiper-pagination-bullet-active {
-        background-color: #0F5978 !important;
-        border: solid 1px #0F5978 !important;
+        background-color: #6A1B1B !important;
+        border: solid 1px #6A1B1B !important;
     }
 
     .swiper-pagination {
