--- a/src/css/customizedpage.css
+++ b/src/css/customizedpage.css
@@ -106,16 +106,17 @@ text-align: center;
         object-fit: cover;
         background-position: initial;
         background-size: cover;
+        background-position-x: center ;
     }
 
     .customized-blackdrop {
         background-color: #000000ab;
-        height: 250px;
+        height: 180px;
     }
 
     .customized-title {
         font-size: 2rem;
-        padding-top: 2.5rem;
+        padding-top: 3rem;
     }
     .customized-content {
         margin-left: 2rem;
@@ -125,7 +126,7 @@ text-align: center;
     .Customized h3 {
         font-size: 1.6rem;
         text-align: center;
-        padding-top: 3rem;
+        padding-top: 2rem;
         padding-bottom: 1rem;
     }
     .customized-col{
@@ -142,8 +143,12 @@ text-align: center;
         border-radius: .2rem;
     }
     .customized-col3{
-        margin-left: 4rem;
-        margin-right: 4rem;
+        margin-left: 2rem;
+        margin-right: 2rem;
+    }
+    .customized-col2{
+        margin-left: 0rem;
+        margin-right: 0rem;
     }
     .customized-option-name3{
         font-size: 1.2rem;
@@ -156,14 +161,14 @@ text-align: center;
         width: 1.2rem;
     }
     .customized-col4{
-        margin-left: 4rem;
-        margin-right: 4rem;
+        margin-left: 2rem;
+        margin-right: 2rem;
     }
     .customized-submit-button{
         border-radius: .5rem;
-        padding-top: 8px;
-        padding-bottom: 8px;
-        width: 18rem;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        width: 100%;
         margin-top: 1rem;
         margin-bottom: 2rem;
     }
