--- a/src/css/Getintouch.css
+++ b/src/css/Getintouch.css
@@ -77,11 +77,16 @@
   }
 
 @media only screen and (max-width: 992px) {
-    
     .Getintouch {
         margin-left: .5rem;
         margin-right: .5rem;
-        padding-bottom: 5rem;
+        padding-bottom: .5rem;
+    
+    }
+    .Getintouch-row {
+        margin-left: .5rem;
+        margin-right: .5rem;
+        padding-bottom: 3rem;
     
     }
     .Getintouch h2 {
