--- a/src/Components/header/Navbar.css
+++ b/src/Components/header/Navbar.css
@@ -2,8 +2,8 @@
     padding-left: 2em;
 }
 .color{
-    /* background-color: #f6fcfd !important; */
-    background-color: transparent !important;
+    background-color: #f6fcfd !important;
+    /* background-color: transparent !important; */
 
 
     /* box-shadow: 0px 9px 65px -2px rgba(125,125,125,0.8);
