--- a/src/Components/header/Navbar.css
+++ b/src/Components/header/Navbar.css
@@ -2,7 +2,7 @@
     padding-left: 2em;
 }
 .color{
-    background-color: #f6fcfd !important;
+    background-color: white !important;
     /* background-color: transparent !important; */
 
 
@@ -35,11 +35,13 @@
 .Navbarcomponents a{
     padding-right: 2em !important;
     padding-left: 2em !important;
+    font-family: "Teachers", sans-serif;
+
     font-size: 1em;
-    font-weight: 600;
+    font-weight: 700;
     padding-top: 1em;
     padding-bottom: 1em;
-    color: rgb(190, 190, 190);
+    color: #212529;
 }
 @media only screen and (max-width: 992px) {
     .Brandlogo img{
@@ -59,3 +61,30 @@
 }
 
 
+header{
+    padding: 10px 0px;
+}
+
+.header-wrapper{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header-wrapper a{
+    color: #313131;
+}
+
+.header-wrapper nav{
+    display: flex;
+    gap: 25px;
+}
+@media only screen and (max-width: 768px) {
+   
+    .header-wrapper{
+        flex-direction: column;
+        gap: 30px;
+    }
+
+
+}
