--- a/src/Components/landingpagepackage/basictopstyle.css
+++ b/src/Components/landingpagepackage/basictopstyle.css
@@ -34,9 +34,10 @@
 
 .level1-Price {
     padding-top: .2rem;
-    font-family: "Merriweather", serif;
+    font-family: "Teachers", sans-serif;
+
     font-size: 2rem;
-    font-weight: 600;
+    font-weight: 550;
 }
 
 .package-features {
